# tempopencv_cpp

./: CMakeLists.txt  LICENSE  Readme.md
src/: mytest.cpp
